# SDL3_bazel

./: .gitignore  BUILD  MODULE.bazel
assets/: BUILD  generate_asset_ids.py  generate_assets.py  id.h  shader_ids.h  texture_ids.h
assets/shaders/: basic.vert  positioned.frag  positioned.vert  textured.frag  textured.vert
src/: BUILD  engine.cpp  main.cpp
