###############################################################################
# Bazel now uses Bzlmod by default to manage external dependencies.
# Please consider migrating your external dependencies from WORKSPACE to MODULE.bazel.
#
# For more details, please check https://github.com/bazelbuild/bazel/issues/18958
###############################################################################
http_archive = use_repo_rule("@bazel_tools//tools/build_defs/repo:http.bzl", "http_archive")

http_archive(
    name = "com_github_sdl",
    build_file = "@//third_party:BUILD",
    strip_prefix = "SDL3-3.2.0",
    url = "https://github.com/libsdl-org/SDL/releases/download/release-3.2.0/SDL3-3.2.0.tar.gz",
)

http_archive(
    name = "com_github_bx",
    build_file = "@//third_party:bx.BUILD",
    strip_prefix = "bx-master",
    url = "https://github.com/bkaradzic/bx/archive/refs/heads/master.tar.gz",
)

http_archive(
    name = "com_github_bimg",
    build_file = "@//third_party:bimg.BUILD",
    strip_prefix = "bimg-master",
    url = "https://github.com/bkaradzic/bimg/archive/refs/heads/master.tar.gz",
)

http_archive(
    name = "com_github_bgfx",
    build_file = "@//third_party:bgfx.BUILD",
    strip_prefix = "bgfx-master",
    url = "https://github.com/bkaradzic/bgfx/archive/refs/heads/master.tar.gz",
)

bazel_dep(
    name = "rules_foreign_cc",
    version = "0.15.0",
)
bazel_dep(name = "platforms", version = "0.0.11")

emsdk_version = "4.0.7"

bazel_dep(name = "emsdk", version = emsdk_version)
git_override(
    module_name = "emsdk",
    remote = "https://github.com/emscripten-core/emsdk.git",
    strip_prefix = "bazel",
    tag = emsdk_version,
)
